Edited previous fixes so everything is working. Had to fix various problems with synchronous code. When stage is loaded callback now animates the stage opacity, as setting it to display none was having it so no position was comeing out on small cells.

--- a/styles/gridly.less
+++ b/styles/gridly.less
@@ -64,7 +64,7 @@ body,html{
 
 .stage {
     height: 100%;
-    display:none;
+    opacity: 0.0;
     overflow: hidden;
     white-space: nowrap;
     font-size: 0;
@@ -100,7 +100,7 @@ body,html{
     padding: 8px 14px;
     white-space: normal;
     font-size: inherit;
-    overflow: visible;
+    overflow: hidden;
 }
 .stage .bigcell:hover {
     background: @second;
